<resources>
    <string name="app_name">AppMediaQuiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_page_competency">KI &amp; KD</string>
    <string name="title_page_guide">Petunjuk Penggunaan</string>
    <string name="subtitle_page_guide_explaination">Penjelasan Tampilan Fitur Game</string>
    <string name="text_page_guide_explaination">1.Di bagian ini merupakan bagian soal yang terdiri atas teks soal yang perlu dijawab oleh siswa, level, dan gambar yang menjadi opsi pilihan\n
    2.Di bagian ini merupakan nyawa yang dimiliki pemain (siswa), jika semua nyawa habis maka game akan “Game Over”.\n
    3.Di Bagian ini berisi gambar-gambar ikan yang mewakili dari pilihan pada soal (nomor pada ikan mewakili nomor yang ada di opsi jawaban soal)\n
    4.Gambar ini merupakan karakter ‘pilot’ yang digerakkan oleh pemain (siswa) untuk dapat menembak ikan berdasarkan opsi pilihan jawaban yang diinginkan\n
    </string>
    <string name="subtitle_page_guide_play_game">Cara Bermain</string>
    <string name="text_page_guide_play_game">1.	Siswa membaca soal yang muncul pada layar gawai dan memperhatikan gambar yang terletak di bawah teks soal. Gambar-gambar tersebut merupakan opsi pilihan jawaban yang harus dipilih oleh siswa\n
    2.	Untuk menjawab soal atau memilih opsi pilihan jawaban, siswa menggerakkan karakter ‘pilot’ dan menembak ikan yang mewakili jawaban soal.\n
    3.	Pergerakan karakter dapat dilakukan ke atas dan ke bawah. Gerakan itu dilakukan dengan menyentuh layar gawai di sebelah kiri secara vertikal\n
    4.	Lalu untuk menembak dapat dilakukan dengan menyentuh layar gawai pada daerah sebelah kiri\n
    5.	Jika ikan yang ditembak adalah opsi yang benar, maka akan lanjut ke level selanjutnya dengan soal baru.\n
    6.	Proses tersebut diulang hingga semua level permainan berhasil diselesaikan.\n
    7.	Jika selama proses tersebut, pemain menembak salah sebanyak 4x, maka permainan akan berhenti atau “Game Over”.\n
    </string>
    <string name="description_game_touch_screen">Daerah layar untuk fungsi bergerak (1) dan menembak (2) dapat dilihat pada gambar di atas</string>
    <string name="title_core_competency">KOMPETENSI INTI KELAS 4 (KI)</string>
    <string name="title_basic_competency">KOMPETENSI DASAR (KD)</string>
    <string name="title_learning_objectives">TUJUAN PEMBELAJARAN</string>
    <string name="text_core_competency">1.	Menerima, menjalankan, dan menghargai ajaran agama yang dianutnya.
2.	Memiliki perilaku jujur, disiplin, tanggung jawab, santun,peduli, dan percaya diridalam berinteraksi dengan keluarga, teman, guru, dan tetangganya
3.	Memahami pengetahuan faktual dengan cara mengamati [mendengar, melihat, membaca] dan menanya berdasarkan rasa ingin tahu tentang dirinya, makhluk ciptaan Tuhan dan kegiatannya, dan benda-benda yang dijumpainya di rumah,sekolah, dan tempat bermain.
4.	Menyajikan pengetahuan faktual dalam bahasa yang jelas,sistematis, dan logis, dalam karya yang estetis, dalam gerakan yang mencerminkan anak sehat, dan dalam tindakan yang mencerminkan perilaku anak beriman dan berakhlak mulia.
    </string>
    <string name="text_basic_competency">3.1Menganalisis hubungan antara bentuk dan fungsi bagian tubuh pada hewan dan tumbuhan.
3.8 Menjelaskan pentingnya upaya keseimbangan dan pelestarian sumber daya alam di lingkungannya.
4.1 Menyajikan laporan hasil pengamatan tentang bentuk dan fungsi bagian tubuh hewan dan tumbuhan.
4.8 Melakukan kegiatan upaya pelestarian sumber daya alam bersama orang-orang di lingkungannya
    </string>
    <string name="text_learning_objectives">1.	Siswa Mampu Menganalisis hubungan antara bentuk dan fungsi bagian tubuh pada hewan
2.	Siswa Mampu Menganalisis hubungan antara bentuk dan fungsi bagian tubuh pada tumbuhan.
3.	Siswa mampu Mengumpulkan informasi tentang pentingnya upaya keseimbangan
4.	 Siswa mampu Mengumpulkan informasi tentang pelestarian sumber daya alam di lingkungannya.
5.	Melakukan kegiatan upaya pelestarian sumber daya alam bersama orang-orang di lingkungannya tubuh hewan dan tumbuhan.
6.	Siswa mampu Melakukan kegiatan upaya pelestarian sumber daya alam bersama orang-orang di lingkungannya
    </string>
    <string name="desc_ragam_tumbuhan_indonesia">Pulau indonesia dikenal sebagai sebutan untaian zamrud khatulistiwa yang memiliki arti kepulauan indonesia adalah negeri yang tanahnya subur dan memiliki kekayaan alam serta terletak di daerah khatulistiwa

Tumbuhan yang tumbuh di indonesia dipengaruhi oleh iklim, letak ketinggian tempat serta kesuburan tanah. Mulai dari daratan rendah seperti pantanhingga daratan tinggi seperti pegunungan

Daerah yang ketinggiannya mencapai 500 m DPL disebut daratan rendah. Didaratan ini  jenis tanaman yang biasa tumbuh dengan baik adalah padi, jagung, dan tanaman palawijapalawija

Daerah daratan yang terletak pada ketinggian lebih dari 600 m DPL termasuk dataran tinggi. Dataran tinggi biasanya di manfaatkan untuk peristirahatan dan tempat rekreasi karena udaranya yang sejuk dan dingin. Berbagai jenis tanaman yang biasanya tumbuh dengan baik di dataran tinggi adalah teh,kopi, kina, buah dan sayuran

Wilayah perbatasan antara daratan dan perairan disebut panta. Pantai ada yang berbentuk landai dan curam. Tumbuhan yang tumbuh dengan baik adalah kelapa dan bakau.
</string>
    <string name="desc_batang">Bagian tumbuhan yang berada di atas tanah adalah batang yang berfungsi sebagai tempat munculnya daun, bunga, dan buah. Batang juga berfungsi mengedarkan mineral dan air  yang diserap akar, serta zat makanan hasil fotosintesis ke seluruh bagian tubuh tumbuhan.
Tumbuhan yang memiliki cadangan makanan di dalam batangnya adalah:
Kelapa.	 Mangga.	 Pisang.	Kentang.</string>
    <string name="desc_bunga">Bunga merupakan  bagian tumbuhan yang  berfungsi sebagai alat perkembangbiakan  tumbuhan biji.</string>
    <string name="desc_daun">Bagian tumbuhan yang berfungsi sebagai tempat  berlangsungnya fotosintesis adalah daun. Daun banyak mengandung zat warna hijau yang disebut klorofil. Daun terdiri atas tangkai daun, tulang daun dan helai daun. Sejumlah tulang daun menyebar keseluruh bagian daun  dan mengangkut air dan mineral menuju ke helai daun</string>
    <string name="desc_biji">Biji merupakan hasil dari pembuahan yang terjadi akibat penyerbukan antara serbuk sari dan sel telur pada putik. Jika biji ditanam akan tumbuh menjadi
tumbuhan baru. Biji memiliki keping. Biji ada yang berkeping satu dan ada yang berkeping dua. Biji berkeping satu disebut monokotil dan biji berkeping  dua disebut dikotil</string>
    <string name="desc_buah">	Buah merupakan bagian tumbuhan yang berfungsi melindungi biji serta cadangan makanan buat biji berkecambah.\nContohnya buah mangga dan buah apel. Buah terdiri atas daging buah dan biji. Bagian yang kita makan biasanya daging buahnya.</string>
    <string name="desc_padi">PADI\nPadi umumnya tumbuh di daerah yang berhawa panas, banyak mengandung uap air, dan curah hujan yang cukup. Sinar matahari dan suhu sangat mempengaruhi tanaman padi. Suhu yang baik untuk pertumbuhan  tanaman padi adalah 23°C. Tinggi tempat yang cocok untuk tanaman padi berkisar antara 0-1.500m di atas permukaan laut.Tanah yang baik untuk pertumbuhan tanaman padi adalah tanah berlumpur yang subur dengan ketebalan 18-22cm. Diperlukan pengairan yang cukup agar padi dapat tumbuh dengan baik.</string>
    <string name="desc_teh">Teh\numumnya tumbuh di daerah pegunungan.Suhu yang baik untuk pertumbuhan tanaman teh adalah berkisar 13°C – 15°C dengan curah hujan tahunan tidak kurang dari 2.000 mm3.Sinar matahari dan suhu udara sangat mempengaruhipertumbuhan tanaman teh. Bila suhu mencapai 30°C, maka akan memperlambat pertumbuhan tanaman teh.Tanah yang cocok untuk tanaman teh adalah tanah yang subur dan banyak mengandung bahan organik dan biasanya terletak di lereng-lereng gunung atau perbukitan.</string>
    <string name="desc_kupu2">	Indonesia merupakan negara dengan keanekaragaman kupu-kupu tertingg kedua di dunia, setelah negara Brazil. Dari sekitar 20.000 jenis kupu-kupu di dunia, sekitar 2.500 jenis berada indonesia. Salah satu jenis kupu-kupu unik yang ada di Indonesia adalah kupu-kupu bersayap burung. Kupu-kupu jenis ini dikenal pertama kali pada awal abaci ke-18.

	Ketika para pendatang berkebangsaan Eropa berkunjung ke Papua dan masuk ke dalam hutan lebat, mereka melihat kupu-kupu bersayap hurung. Kawasan Pegunungan Arfak di kawasan utara Papua adalah pusat terbesar penyebaran kupu-kupu jenis ini. Adapun di Papua Nugini, pusat sebaran adalah hutan di Provinsi Oro, Papua Nugini Timur. Akibat keindahan dan keunikannya, kupu-kupu bersayap burung terancam akibat perburuan. Para kolektor menangkapnya untuk dijadikan koleksi pribadi. 

Dua jenis kupu-kupu bersayap burung yang terkenal adalah kupu-kupu bersayap burung goliath (Ornithoptera goliath) dan kupu-kupu bersayap burung Ratu Alexandra (Ornithoptera alexandreae).
	Kupu-kupu sayap burung goliath memiliki tubuh ukuran diameter 28 cm. Ini adatah jenis kupu-kupu terbesar kedua di dunia setelah kupu-kupu sayap burung Ratu Alexandra yang diameter tubuhnya hampir mencapai 33 cm.
	Kupu-kupu bersayap burung goliath dapat digunakan sebagai bioindikator lingkungan. Bioindikator adalah makhluk hidup yang dapat dijadikan penunjuk kualitaas lingkuingan. Kupu-kupu bersayap burung goliath hanya meletakkan telurnya di daun pohon Aristolochia tagala. Hanya daun itulah yang dimakan ulat yang menetas dari telur. Ini menjadikan kupu-kupu sangat rentan punah karena hidupnya sangat bergantung pada satu jenis tanaman.
	Jadi, dapat dikatakan jika satu jenis kupu-kupu punah, maka ada sesuatu yang hilang dalam ekosistem.
</string>
    <string name="desc_akar">Akar adalah bagian tumbuhan yang umumnya berada di dalam tanah.  Untuk beberapa jenis tumbuhan, akar juga terdapat di atas tanah bahkan menggantung. Akar berfungsi antara lain sebagai bagian yang mengokohkan tumbuhan. Jika tumbuhan tidak memiliki akar, tumbuhan akan mudah dicabut,mudah roboh ketika diterpa angin, atau hanyutterbawa air ketika turun hujan.Zat-zat mineral dan air yang dibutuhkan untuk membuat makanan diserap oleh akar dari dalam tanah. Namun, pada beberapa tumbuhan tertentu, akar tidak hanya berfungsi menyerap air dan mineral, tetapi juga berfungsi sebagai penyimpanan cadangan makanan, misalnya pada beberapa tumbuhan umbi-umbian.
Akar terbagi menjadi  dua yaitu :</string>
    <string name="desc_cat">Kucing merupakan hewan yang hidup di darat, tubuh kucing ditutupi oleh rambut yang lebat</string>
    <string name="desc_fish">Ikan hidup di air dan tidak bisa hidup di darat. Ikan hidup diair karena mempunyai insang sebagai alat pernapasannya. Berikut ini bagian-bagian tubuh ikan</string>
    <string name="desc_healthy_env">Lingkungan sehat memiliki arti lingkungan yang mendukung penghuninya hidup sehat. Lingkungan sehat memiliki ciri-ciri:\n
        - Sumber air bersih dan tidak tercemar\n
- Saluran pembuangan air kotor lancar sehingga tidak ada air yang menggenang\n
- Udara bersih segar dan sejuk\n
- Banyak tumbuhan hijau\n
- Tidak ada sampah berserakan
- Terbebas dari binantang pembawa penyakit\n
\n
Sedangkan manfaat lingkungan yang sehat adalah\n
- Lingkungan enak dipandang\n
- Memiliki kualitas udara yang baik\n
- Jauh dari penyakit\n
- Terhindar dari bencana alam\n </string>
    <string name="text_OK">OK</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="hint_email">email</string>
    <string name="text_having_account">sudah punya akun, silahkan login</string>
    <string name="text_teacher">Guru</string>
    <string name="text_student">Siswa</string>
    <string name="text_dont_have_account">belum punya akun, silahkan register</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="hint_name">Nama Pengguna</string>
    <string name="hint_fullname">Nama Lengkap</string>
</resources>