<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    tools:context=".view.auth.LoginFragment">


    <ImageView
        style="@style/ThemeAuthPage"
        android:layout_width="300dp"
        android:id="@+id/modal_login"
        android:tooltipText="Mulai Permainan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/ThemeInputField"
        app:layout_constraintEnd_toEndOf="@+id/modal_login"
        app:layout_constraintStart_toStartOf="@+id/modal_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/ThemeEditText"
            android:id="@+id/edt_email"
            android:textColor="@color/primaryTextColor"
            android:hint="@string/hint_fullname"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        style="@style/ThemeInputField"
        app:layout_constraintEnd_toEndOf="@+id/modal_login"
        app:layout_constraintStart_toStartOf="@+id/modal_login"
        app:layout_constraintTop_toBottomOf="@+id/ti_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/ThemeEditText"
            android:id="@+id/edt_password"
            android:textColor="@color/primaryTextColor"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextTitlePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/modal_login"
        app:layout_constraintStart_toStartOf="@+id/modal_login"
        app:layout_constraintTop_toTopOf="@+id/modal_login" />


    <ImageButton
        android:id="@+id/btn_login"
        style="@style/ButtonModalAuth"
        android:background="@null"
        android:contentDescription="login"
        app:layout_constraintBottom_toBottomOf="@+id/modal_login"
        app:layout_constraintEnd_toEndOf="@+id/ti_password"
        app:layout_constraintTop_toBottomOf="@+id/ti_password"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/text_Ok"
        style="@style/TextTitlePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_OK"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

    <TextView
        style="@style/ThemeTextAuthNote"
        android:id="@+id/tv_to_register"
        android:text="@string/text_dont_have_account"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/ti_password"
        app:layout_constraintTop_toBottomOf="@+id/ti_password" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>