<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    tools:context=".view.guide.GuideFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_exit"
            style="@style/ThemeButtonExit"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/view_bg_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_bg_title" />

        <FrameLayout
            android:id="@+id/framelayout"
            style="@style/ThemePage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_top_page">

            <androidx.core.widget.NestedScrollView
                style="@style/ContextScrollPage"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:text="@string/subtitle_page_guide_explaination"
                        android:textColor="@color/secondaryColor"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="@dimen/margin_16"
                        android:src="@drawable/guide_pict" />

                    <TextView
                        style="@style/SecondaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16"
                        android:text="@string/text_page_guide_explaination"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:text="@string/subtitle_page_guide_play_game"
                        android:textColor="@color/secondaryColor"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_page_guide_play_game"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:src="@drawable/screen_section_touch" />

                    <TextView
                        style="@style/SecondaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_game_touch_screen"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/PrimaryTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:text="Video Screen Record Bermain Game"
                        android:textAlignment="center"
                        android:textColor="@color/secondaryColor"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/playvideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16"
                        android:layout_gravity="center_horizontal"
                        android:background="@null"
                        android:src="@drawable/ic_play_video"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#D1D0D0"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:text="Klik Ikon Untuk Memulai Video"/>
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </FrameLayout>

        <View
            android:id="@+id/view_bg_title"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@drawable/modal_title"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="@+id/framelayout"
            app:layout_constraintStart_toStartOf="@+id/framelayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextTitlePage"
            android:text="@string/title_page_guide"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/view_bg_title"
            app:layout_constraintEnd_toEndOf="@+id/view_bg_title"
            app:layout_constraintStart_toStartOf="@+id/view_bg_title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="view_bg_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="68dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>